--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -18,7 +18,11 @@
         <i class="fa-solid fa-pizza-slice"></i>
         <i class="fa-solid fa-archway"></i>
     </nav>
+
     <div class="album-container">
+        <h1>
+            <?= $greetings ?>
+        </h1>
         <div class="album"></div>
         <div class="album"></div>
 
