--- a/public/views/register.html
+++ b/public/views/register.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="public/css/login.css">
-    <title>login</title>
+    <link rel="stylesheet" type="text/css" href="public/css/register.css">
+    <title>register</title>
 </head>
 
 <body>
@@ -16,15 +16,18 @@
             <img class="logo" src="public/img/logo.png">
         </div>
         
-        <div class="login-container">
+        <div class="register-container">
             <div class="message">
-                <span id="hello">Log in</span>
+                <span id="hello">Hello!</span>
+                <span id="hello2">Sign up to Get Started</span>
             </div>
             <form method="POST">
                 <input name="email" type="text" placeholder="Email Address">
+                <input name="login" type="text" placeholder="Login">
                 <input name="password" type="password" placeholder="Password">
-                <button id="login-button" type="submit">Log In</button>
-                <span id="signup">Don't have an account? <a href="/register">Sign up</a></span>
+                <input name="password" type="password" placeholder="Repeat Password">
+                <button id="register-button" type="submit">Register</button>
+                <span id="login">Have an account? <a href="/login">Log in</a></span>
             </form>
                 
         </div>
