--- a/public/css/login.css
+++ b/public/css/login.css
@@ -111,3 +111,81 @@ input::placeholder {
     color: #3067E6;
     font-weight: bold;
 }
+
+@media only screen and (max-device-width: 600px) {
+    
+    * {
+        font-size: 36px;
+    }
+
+    .container {
+        flex-direction: column;
+    }
+
+    .logo-container {
+        width: 100%;
+        height: 20vh;
+    }
+
+    .logo {
+        width: 80%;
+    }
+
+    .login-container {
+        width: 100%;
+        height: 80vh;
+        border-radius: 20px 20px 0px 0px;
+        justify-content:flex-start;
+    }
+
+    .message {
+        width: 80%;
+    }
+    
+    #hello {
+        font-weight: bold;
+        font-size: 0.8em;
+    }
+    
+    #hello2 {
+        font-size: 0.6em;
+    }
+
+    form {
+        width: 100%;
+        height: 40vh;
+        margin-top: 10%;
+    }
+
+    input {
+        text-indent: 5vw;
+        font-weight: 400;
+    }
+
+    input::placeholder {
+        font-weight: 400;
+    }
+
+    #login-button {
+        font-weight: 400;
+    }
+
+    #login-button:hover {
+        background-color: #3067E6;
+        color: white;
+    }
+
+    #signup {
+        color: black;
+        font-size: 0.5em;
+        margin-top: 1.5vh;
+    }
+
+    #signup a:hover, a:visited, a:link, a:active {
+        text-decoration: none;
+        color: #3067E6;
+        font-weight: bold;
+        font-size: 1em;
+    }
+
+}
