--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,11 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="public/css/style.css">
-    <title>INDEX</title>
+    <title>eFlashcards</title>
 </head>
 
 <body>
-    INDEX
+    <div class="base-container">
+        <nav>
+            <div class="logo-container">
+                <img class="logo" src="public/img/logo.png">
+            </div>
+            <div class="user-container">
+                <img class="user" src="public/img/user.png">
+                <span id="username">Damian Zietara</span>
+            </div>
+            <ul class="menu-list">
+                <li>
+                    <a href="#">Flashcards</a>
+                </li>
+                <li>
+                    <a href="#">Learn</a>
+                </li>
+                <li>
+                    <a href="#">Settings</a>
+                </li>
+                <li>
+                    <a href="#">Logout</a>
+                </li>
+            </ul>
+        </nav>
+
+        <main>
+            <header>
+                
+            </header>
+            <section>
+                
+            </section>
+        </main>
+    </div>
 
 </body>
 
