Added homepage layout for desktop

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,7 +13,7 @@
     <div class="base-container">
         <nav>
             <div class="logo-container">
-                <img class="logo" src="public/img/logo.png">
+                <img class="logo" src="public/img/logo.svg">
             </div>
             <div class="user-container">
                 <img class="user" src="public/img/user.png">
@@ -30,16 +30,70 @@
                     <a href="#">Settings</a>
                 </li>
                 <li>
-                    <a href="#">Logout</a>
+                    <a href="/login">Logout</a>
                 </li>
             </ul>
         </nav>
 
         <main>
             <header>
+                <div class="header-container">
+                    <span class="title">Flashcards</span>
+                    <button class="add-flashcard"> Add Flashcards</button>
+                </div>
                 
             </header>
             <section>
+                <div class="flashcard">
+                    <span class="flashcard-category">Category</span>
+                    <span class="category-terms">x terms</span>
+                </div>
+
+                <div class="flashcard">
+                    <span class="flashcard-category">Category</span>
+                    <span class="category-terms">x terms</span>
+                </div>
+
+                <div class="flashcard">
+                    <span class="flashcard-category">Category</span>
+                    <span class="category-terms">x terms</span>
+                </div>
+
+                <div class="flashcard">
+                    <span class="flashcard-category">Category</span>
+                    <span class="category-terms">x terms</span>
+                </div>
+
+                <div class="flashcard">
+                    <span class="flashcard-category">Category</span>
+                    <span class="category-terms">x terms</span>
+                </div>
+
+                <div class="flashcard">
+                    <span class="flashcard-category">Category</span>
+                    <span class="category-terms">x terms</span>
+                </div>
+
+                <div class="flashcard">
+                    <span class="flashcard-category">Category</span>
+                    <span class="category-terms">x terms</span>
+                </div>
+                
+                <div class="flashcard">
+                    <span class="flashcard-category">Category</span>
+                    <span class="category-terms">x terms</span>
+                </div>
+
+                <div class="flashcard">
+                    <span class="flashcard-category">Category</span>
+                    <span class="category-terms">x terms</span>
+                </div>
+
+                <div class="flashcard">
+                    <span class="flashcard-category">Category</span>
+                    <span class="category-terms">x terms</span>
+                </div>
+                
                 
             </section>
         </main>
