--- a/public/views/register.html
+++ b/public/views/register.html
@@ -13,7 +13,7 @@
     <div class="container">
 
         <div class="logo-container">
-            <img class="logo" src="public/img/logo.png">
+            <img class="logo" src="public/img/logo.svg">
         </div>
         
         <div class="register-container">
@@ -21,7 +21,7 @@
                 <span id="hello">Hello!</span>
                 <span id="hello2">Sign up to Get Started</span>
             </div>
-            <form method="POST">
+            <form method="POST" action="/register">
                 <input name="email" type="text" placeholder="Email Address">
                 <input name="login" type="text" placeholder="Login">
                 <input name="password" type="password" placeholder="Password">
