--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,6 @@
 body {
     background-color: #3067E6;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: calc(16px + 1vw);
     line-height: calc(1.1em + 0.5vw);
     margin: 0;
@@ -85,7 +85,7 @@ input::placeholder {
 #login-button {
     background-color: #3067E6;
     height: 5.5vh;
-    border: 1px solid black;
+    border: 1px solid #707070;
     border-radius: 7px;
     margin: 1.5%;
     width: 81%;
