--- a/public/views/login.html
+++ b/public/views/login.html
@@ -13,14 +13,14 @@
     <div class="container">
 
         <div class="logo-container">
-            <img class="logo" src="public/img/logo.png">
+            <img class="logo" src="public/img/logo.svg">
         </div>
         
         <div class="login-container">
             <div class="message">
                 <span id="hello">Log in</span>
             </div>
-            <form method="POST">
+            <form method="POST" action="/index">
                 <input name="email" type="text" placeholder="Email Address">
                 <input name="password" type="password" placeholder="Password">
                 <button id="login-button" type="submit">Log In</button>
