--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,10 +122,11 @@ header {
     border: 1px solid #707070;
     border-radius: 7px;
     margin: 1.5%;
-    width: 30%;
+    width: 27%;
     color: white;
     font-size: 0.50em;
     transition: background-color 0.5s;
+    margin-right: 3%;
 }
 
 .add-flashcard:hover {
@@ -157,7 +158,6 @@ section::-webkit-scrollbar {
     display: flex;
     flex-direction: column;
     transition: box-shadow 0.4s;
-    
 }
 
 .flashcard-category {
@@ -175,4 +175,9 @@ section::-webkit-scrollbar {
 
 .flashcard:hover {
     box-shadow: rgba(0, 0, 0, 0.65) 0px 5px 18px;
+}
+
+@media only screen and (max-device-width: 600px) {
+    /* TO DO */
+
 }
