--- a/public/css/login.css
+++ b/public/css/login.css
@@ -128,6 +128,11 @@ input::placeholder {
     color: red;
 }
 
+.no-valid {
+    border: 2px solid red;
+    outline: none;
+}
+
 @media only screen and (max-device-width: 600px) {
     
     * {
