--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,8 +54,8 @@ nav {
 }
 
 .menu-list {
-    width:100%;
-    height:60%;
+    width: 100%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -90,7 +90,7 @@ li:last-child {
 main {
     width: 80%;
     height: 100%;
-    background-color: #FBFCFF; /*  lub #ededee */
+    background-color: #FBFCFF;
     border-radius: 40px 0px 0px 40px;
     display: flex;
     flex-direction: column;
@@ -107,7 +107,6 @@ header {
     width: 80%;
     margin: 0 auto;
     margin-top: 4%;
-
 }
 
 .title {
@@ -178,35 +177,46 @@ section::-webkit-scrollbar {
 }
 
 .add-set-container {
-    width: 80%;
+    width: 100%;
     height: 80%;
     margin: 0 auto;
     padding: 0;
+
 }
 
 .add-set-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin: 0 auto;
-    height: 100%;
+    padding: 0;
+    width: 40%;
+    height: 80%;
+}
+
+#set::-webkit-scrollbar {
+   /* display: none;*/ /* hide scrollbar */
+}
+
+
+#set {
+    height: 55vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0.2em;
     width: 100%;
+    overflow-y:auto;
+    overflow-x: hidden;
 }
 
 input {
     background-color: #EBEBEB;
-    height: 5vh;
+    height: 4vh;
     border: 1px solid grey;
     border-radius: 2px;
-    width: 100%;
+    width: 90%;
     font-size: 0.5em;
     color: black;
     opacity: 50%;
     font-weight: bold;
     text-align: center;
-}
-table tr td {
-    padding-inline: 1%;
 }
 
 input::placeholder {
@@ -214,21 +224,31 @@ input::placeholder {
     text-align: center;
 }
 
+#set-name-input {
+    width: 43%;
+    margin-bottom: 5%;
+}
+
 #add-set-button {
     background-color: #3067E6;
     height: 5.5vh;
     border: 1px solid #707070;
     border-radius: 7px;
-    width: 101%;
+    width: 46%;
     color: white;
     font-size: 0.55em;
     transition: background-color 0.5s;
-    margin: 0 auto;
-
+    margin-top: 5%;
 }
 
 #add-set-button:hover {
     background-color: #2148A1;
+}
+
+.controls a {
+    color: #0C1192;
+    font-size: 0.55em;
+    padding: 1em;
 }
 
 @media only screen and (max-device-width: 600px) {
