--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -26,3 +26,43 @@
 table {
     margin-left: 2%;
 }
+
+.search-user-bar {
+    width: 20.5%;
+    margin-left: 10%;
+    margin-bottom: 1%;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+}
+
+.search-user {
+    width: 100%;
+    font-size: 0.5em;
+    color: black;
+    opacity: 50%;
+    font-weight: bold;
+    text-align: center;
+    background-color: #EBEBEB;
+    border-radius: 7px;
+    height: 4vh;
+    border: 1px solid grey;
+}
+
+#delete-user-button {
+    width: 100%;
+    background-color: #3067E6;
+    height: 4vh;
+    border: 1px solid #707070;
+    border-radius: 7px;
+    color: white;
+    font-size: 0.5em;
+    margin-left: 5%;
+    transition: background-color 0.5s;
+}
+
+#delete-user-button:hover {
+    background-color: #2148A1;
+}
