--- a/public/css/style.css
+++ b/public/css/style.css
@@ -272,6 +272,12 @@ section::-webkit-scrollbar {
 td {
     font-size: 0.5em;
 }
+
+.messages {
+    font-size: 0.55em;
+    color: red;
+}
+
 @media only screen and (max-device-width: 600px) {
     /* TO DO */
 
