--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -19,24 +19,8 @@ form {
     flex-direction: row;
 }
 
-#delete-button {
-    width: 30%;
-    background-color: #3067E6;
-    border: 1px solid #707070;
-    border-radius: 7px;
-    color: white;
-    font-size: 0.45em;
-    transition: background-color 0.5s;
-    margin: 0 auto;
-}
-
 #delete-button:hover {
     background-color: #2148A1;
-}
-
-#delete-button {
-    margin: auto;
-    height: 4vh;
 }
 
 .user-info {
@@ -46,5 +30,25 @@ form {
     margin-left: 7%;
     margin-top: 1.5%;
     line-height: 2em;
+}
+
+@media only screen and (max-device-width: 600px)  {
+
+    .users {
+        margin: 0 auto;
+        height: 25vh;
+        width: 80%;
+    }
+
+    .user-info {
+        font-size: 0.7em;
+        margin-left: 7%;
+        margin-top: 1%;
+        line-height: 2em;
+    }
+
+    .del {
+        margin: 6% auto 0;
+    }
 }
 
