--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,6 +113,7 @@ header {
     color: #0C1192;
     font-size: 1.6em;
     font-weight: 800;
+    width: 40%;
 }
 
 .search-bar {
@@ -194,6 +195,18 @@ section::-webkit-scrollbar {
     margin-top: -6%;
 }
 
+#delete-button {
+    width: 30%;
+    background-color: #3067E6;
+    border: 1px solid #707070;
+    border-radius: 7px;
+    color: white;
+    font-size: 0.45em;
+    transition: background-color 0.5s;
+    margin: 10% auto 0;
+    height: 4vh;
+}
+
 .flashcard:hover {
     box-shadow: rgba(0, 0, 0, 0.65) 0px 5px 18px;
 }
@@ -203,7 +216,6 @@ section::-webkit-scrollbar {
     height: 80%;
     margin: 0 auto;
     padding: 0;
-
 }
 
 .add-set-form {
@@ -277,7 +289,186 @@ td {
     color: red;
 }
 
-@media only screen and (max-device-width: 600px) {
-    /* TO DO */
+@media only screen and (max-device-width: 600px)  {
+    .base-container {
+        flex-direction: column;
+    }
 
+    nav {
+        width: 100%;
+        height: 20%;
+        background-color: #3067E6;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: row;
+    }
+
+    main {
+        width: 100%;
+        height: 90%;
+        background-color: #FBFCFF;
+        border-radius: 20px 20px 0px 0px;
+        justify-content: flex-start;
+    }
+
+    header {
+        height: 15%;
+    }
+
+    .add-flashcard {
+        height: 4.2vh;
+        width: 100%;
+        font-size: 0.8em;
+        margin: -2% auto 0 38%;
+    }
+
+    .section-container {
+        width: 80%;
+        height: 80%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1.5em;
+        margin: 0 auto;
+        overflow: auto;
+    }
+
+    section::-webkit-scrollbar {
+        display: none; /* hide scrollbar */
+    }
+
+    .section-container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        overflow: auto;
+    }
+
+    .search-bar {
+        width: 79%;
+        padding-bottom: 3%;
+    }
+
+    .search {
+        font-size: 0.9em;
+        font-weight: bold;
+    }
+
+    .search::placeholder {
+        font-weight: bold;
+    }
+
+    .flashcard {
+        height: 17vh;
+        width: 80%;
+        margin: 0 auto;
+        padding-bottom: 2vh;
+    }
+
+    .flashcard-category {
+        margin-top: 6%;
+        font-size: 1em;
+    }
+
+    .category-terms {
+        font-size: 0.9em;
+        margin-top: 0;
+    }
+
+    #delete-button {
+        width: 30%;
+        font-size: 0.9em;
+        margin: 13% auto 0;
+    }
+
+    .user-container {
+        display: none
+    }
+
+    .title {
+        width: 10%;
+    }
+
+    nav {
+        width: 100%;
+        height: 10%;
+        background-color: #3067E6;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: row;
+    }
+
+    .logo-container {
+        width: 70%;
+        height: 100%;
+        display: flex;
+    }
+
+    .logo {
+        width: 80%;
+    }
+
+    .menu-list {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        list-style-type: none;
+        margin-right: 4%;
+    }
+
+    a {
+        text-decoration: none;
+        display: inline-block;
+        color: white;
+        font-size: 0.7em;
+    }
+
+    li {
+        margin-top: 0;
+        position: relative;
+        bottom: 0;
+        font-size: 1.1em;
+        padding-left: 4%;
+    }
+
+    li:first-child {
+        padding-left: 0;
+    }
+
+    li:last-child {
+        position: relative;
+        margin-bottom: 0;
+    }
+
+    .add-set-form {
+        width: 80%;
+    }
+
+    #add-set-button {
+        height: 4vh;
+        font-size: 0.7em;
+        margin-top: 3%;
+    }
+
+    #title {
+        width: 60%;
+    }
+
+    #header {
+        height: 10%;
+    }
+
+    .controls a {
+        color: #0C1192;
+        font-size: 0.65em;
+        padding: 1em;
+        margin-left: -3%;
+    }
+
+    .add-set-input {
+        font-size: 0.7em;
+    }
 }
